--- a/phonebook.cabal
+++ b/phonebook.cabal
@@ -25,7 +25,11 @@ source-repository head
 
 library
   exposed-modules:
+      API
+      DB
+      DTO
       Lib
+      Model
   other-modules:
       Paths_phonebook
   autogen-modules:
@@ -37,6 +41,7 @@ library
       aeson
     , base >=4.7 && <5
     , servant-server
+    , sqlite-simple
     , wai
     , warp
   default-language: Haskell2010
@@ -55,6 +60,7 @@ executable phonebook-exe
     , base
     , phonebook
     , servant-server
+    , sqlite-simple
     , wai
     , warp
   default-language: Haskell2010
@@ -77,6 +83,7 @@ test-suite phonebook-test
     , hspec-wai-json
     , phonebook
     , servant-server
+    , sqlite-simple
     , wai
     , warp
   default-language: Haskell2010
