--- a/phonebook.cabal
+++ b/phonebook.cabal
@@ -26,7 +26,8 @@ source-repository head
 library
   exposed-modules:
       API
-      DB
+      DB.Operations
+      DB.Queries
       DTO
       Lib
       Model
