--- a/package.yaml
+++ b/package.yaml
@@ -22,7 +22,9 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - aeson
+- lens
 - text
+- password
 - bytestring
 - utf8-string
 - postgresql-simple
