--- a/phonebook.cabal
+++ b/phonebook.cabal
@@ -28,6 +28,7 @@ library
       Api
       Api.Persons
       Api.Users
+      Db
       Db.Model.Person
       Db.Model.User
       Db.Operations
@@ -52,6 +53,7 @@ library
     , openapi3
     , password
     , postgresql-simple
+    , resource-pool
     , servant-openapi3
     , servant-server
     , servant-swagger-ui
@@ -81,6 +83,7 @@ executable phonebook-exe
     , password
     , phonebook
     , postgresql-simple
+    , resource-pool
     , servant-openapi3
     , servant-server
     , servant-swagger-ui
@@ -114,6 +117,7 @@ test-suite phonebook-test
     , password
     , phonebook
     , postgresql-simple
+    , resource-pool
     , servant-openapi3
     , servant-server
     , servant-swagger-ui
