--- a/package.yaml
+++ b/package.yaml
@@ -31,6 +31,8 @@ dependencies:
 - resource-pool
 - servant
 - servant-server
+- servant-auth
+- servant-auth-server
 - string-conversions
 - wai
 - wai-logger
