--- a/stack.yaml
+++ b/stack.yaml
@@ -18,7 +18,7 @@
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2023-01-01.yaml
 resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/22/4.yaml
+  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/22/11.yaml
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -41,6 +41,13 @@ packages:
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 # extra-deps: []
+extra-deps:
+- github: haskell-beam/beam
+  commit: b2e83c4bcbf818b4cc901d355f4f50e1e1a284a3
+  subdir: beam-postgres
+- github: haskell-beam/beam
+  commit: b2e83c4bcbf818b4cc901d355f4f50e1e1a284a3
+  subdir: beam-migrate
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
