Refactor endpoint for adding new persons

--- a/phonebook.cabal
+++ b/phonebook.cabal
@@ -38,8 +38,10 @@ library
       Phonebook.Persons.Database
       Phonebook.Persons.Database.Table
       Phonebook.Persons.Person
+      Phonebook.Persons.Person.Attributes
       Phonebook.Persons.Web
       Phonebook.Persons.Web.All
+      Phonebook.Persons.Web.Create
       Phonebook.Persons.Web.Specific
       Phonebook.Users.Database
       Phonebook.Users.Database.Table
