--- a/package.yaml
+++ b/package.yaml
@@ -44,11 +44,13 @@ dependencies:
 - warp
 - http-types
 - http-client
+- http-media
 - servant-openapi3
 - servant-swagger-ui
 - openapi3
 - dotenv
 - conduit
+- servant-multipart
 - minio-hs
 - servant-multipart
 
